test/types/type_variables/deitz/part3/test_overinstantiate1a.good
test_overinstantiate1a.chpl:1: error: Function 'foo' has been instantiated too many times
note:   If this is intentional, try increasing the instantiation limit from 160
