test/types/type_variables/deitz/part3/test_overinstantiate1a.chpl
proc foo(param i : int) {
  writeln("in foo ", i);
  foo(i + 1);
}

foo(1);
